css/main.css
body {
  margin:0; padding:0;
  font-family: 'Barlow', sans-serif;
}
body {
  margin:0; padding:0;
  font-family: 'Barlow', sans-serif;
}

.container {
	width: 100%
}
#map {
  position:absolute;
  width:67%;
  height:100%;
}
.page-content {
	width: 67%;
	right: 0;
}
article.page-content {
	width: 100%;
}
.sidebar {
	height:100%;
	width:33%;
	background-color:#fff;
	position:fixed!important;
	z-index:1;
	right:0;
	/*overflow:auto;*/
}

.post-title{
	font-size: 14px;
}

.post {
  padding-left: 1.6em;
  padding-right: 1em;
  padding-top: 1em;
  padding-bottom: 1em;
}

p.post-header {
letter-spacing: 2px;
margin-bottom: .5rem;
font-size: 13px;
margin-top: 0;
font-family: 'Lato', sans-serif;
font-weight: 300;
font-style: italic;
border-width: 0 0 1px;
border-style: dotted;
line-height: 21px;
text-align: left;
z-index: 1 !important;
}

h1.post-title {
font-size: 18px
}

p.byline {
	font-size: 15px;
	line-height: 15px;
	margin-bottom: .5rem;
	font-family: 'Lato', sans-serif;
	font-weight: 300;
	font-style: italic;


}

article.post-article, img {
height: 200px;
}

article.post-article {
height: 60vw;
overflow-y: scroll;
z-index: 1 !important;
padding-bottom: 10px;
font-size: 16px;

}


p {
	display: block;
	-webkit-margin-before: 1em;
	-webkit-margin-after: 1em;
	-webkit-margin-start: 0px;
	-webkit-margin-end: 0px;
	text-align: left
}

@media (max-width:768px) {
    .sidebar, #map {
        position: absolute;
        left: 0;
        height: 50vh;
        width: 100vw
    }

    body {
        overflow-y: hidden;
        overflow-x: hidden
    }
	article.post-article {
	height: 25vw;
	}
	.page-content {
		width: 100vw;
	}
	article.page-content {
		width: 100vw;
	}
    #map {
        top: 0
    }

    .sidebar {
        top: 50vh
    }

    .sidebar .sidebar {
        height: 50vh !important;
        width: 100vw
    }

}

@media (min-width:768px) and (max-width:1100px) {
    #map {
        top: 0;
        height: 100vh;
        width: 67vw;
    }

    #map {
        left: 0
    }

    .sidebar {
    	width: 33vw;
        position: absolute;
        right: 0;
    }
}

@media (min-width:1100px) {
    .sidebar, #map {
        position: absolute;
        top: 0;
        height: 100vh
    }

    body {
        overflow-y: hidden;
        overflow-x: hidden
    }

    #map {
        left: 0;
        width: 67vw;
    }

    .sidebar {
        width: 33vw;
        right: 0;
    }
}

img.legend {
	height: 24px;
	padding: 0px;
	vertical-align: middle;
}

